# Binary-data-processing

./: CMakeLists.txt  README.md  TextFileSerializer.h  doc.md  ifactory.h  main.cpp  person.cpp  person.h  person_hex.txt  student.h  vector_of_string_factory.cpp  vector_of_string_factory.h
Apc_binary_files_exc/: CMakeLists.txt  main.cpp  person.cpp  person.h  person_hex.txt  student.h
c_binary_proccessing/: CMakeLists.txt  main.c
